# ph

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  picker.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: agent.rs  chunk.rs  db.rs  embed.rs  fs.rs  git.rs  knowledge.rs  knowledge_index.rs  lib.rs  llm.rs  mcp_server.rs  project.rs  todo.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  stage_prompt.rs
src/: main.rs
