[package]
name = "ph"
version = "0.1.0"
edition = "2021"

[dependencies]
cli = { path = "crates/cli" }
tokio.workspace = true
anyhow.workspace = true

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/infra",
    "crates/service",
    "crates/cli",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "1.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
anyhow = "1"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
console = "0.16"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
