[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
dialoguer.workspace = true
console.workspace = true
fuzzy-matcher = "0.3"
ratatui = "0.26"
crossterm = "0.27"

core = { path = "../core" }
service = { path = "../service" }
infra = { path = "../infra" }
