[package]
name = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
dirs.workspace = true
toml.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde_json.workspace = true

core = { path = "../core" }
